# sw-redirect-micro-service

./: .env  .gitignore  README.md  dockerfile  encrypt.py  fetch.sh  main.py  pyproject.toml  requirements.txt  sw-redirect-micro-service.code-workspace
.github/workflows/: deploy.yml
scripts/: bootstrap.sh
src/: handler.py
src/libs/: crypto.py
src/services/: __init__.py  micro_cms.py
